--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
   <body>
     <nav class="navbar shadow fixed-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-      <a class="navbar-brand text-warning" href="#">KenEnma</a>
+      <a class="navbar-brand text-warning" href="https://www.instagram.com/andi29p/">KenEnma</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Me</a>
+            <a class="nav-link" href="#about">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Portfolio</a>
+            <a class="nav-link" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -44,7 +44,7 @@
   <section id="home" class="d-flex main-section main-background text-light p-3 justify-content-center">
     <div class="d-flex">
       <div class="my-auto">
-      <div class="mb-5">Hello, nama Saya</div>
+      <div class="mb-2">Hello, nama Saya</div>
       <div class="font-weight-bold display-4">Priyandi Zembar Azizi</div>
       <div class="before-line">Freelancer & Mahasiswa</div>
       <div class="flex-row align-content-around">
@@ -60,30 +60,188 @@
     </div>
   </section>
 
-  <!-- testimoni -->
-  <section class="about" id="about">
-    <div class="container text-center">
-      <h1 class="heading-1">About Me</h1>
-    </div>
 
-    <div class="row justify-content-center text-center">
-      <div class="col-md-12">
-        <div class="card" style="width: 20rem;">
-        <img src="img/8.jpg" alt="image1" class="card-img-top">
-        <div class="card-body">
-          <h4 class="card-title">About</h4>
-          <p class="card-text">Saya Adalah mahasiswa dari Prodi Teknik Informatika UNPAS, dan saya melakukan pekerjaan sampingan sebagai web developer.</p>
+  <main>
+  <!-- ======= About Section ======= -->
+  <section id="about" class="about">
+  <div class="paddsection">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 text-center">
+          <h1>About me</h1>
+          <hr>
         </div>
+      </div>
+      <div class="row justify-content-between">
+
+        <div class="col-lg-4 ">
+          <div class="div-img-bg">
+            <div class="about-img">
+              <img src="img/9.jpg" class="img-responsive" alt="me">
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-7">
+          <div class="about-descr">
+
+            <p class="p-heading">Saya Adalah seorang mahasiswa tingkat satu Prodi Teknik Informatika UNPAS. </p>
+            <p class="separator">Umur saya 19 Tahun saya tinggal di Cicalengka Kab. Bandung Jawa Barat. Saya adalah seorang yang gemar atau hobi berolahraga terutama bersepeda. Saya tinggal bersama Kedua orang tua saya sebagai anak ke-2 dari 2 bersaudara.</p>
+
+          </div>
+
         </div>
       </div>
     </div>
-    
+  </div>
+</section>
+  <!-- End About Section -->
+
+  <!-- Portfolio -->
+  <section class="portfolio" id="portfolio">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 text-center">
+          <h2>Portfolio</h2>
+          <hr>
+        </div>
+      </div>
+
+     <div class="row">
+       <div class="col-md-4">
+        <div class="card">
+          <a href=""><img src="img/1.jpg" class="card-img-top" alt="Card imf cap"></a>
+        </div>
+       </div>
+       <div class="col-md-4">
+        <div class="card">
+          <a href=""><img src="img/2.jpg" class="card-img-top" alt="Card imf cap"></a>
+        </div>
+       </div>
+       <div class="col-md-4">
+        <div class="card">
+          <a href=""><img src="img/3.jpg" class="card-img-top" alt="Card imf cap"></a>
+        </div>
+       </div>
+     </div>
+     <div class="row">
+      <div class="col-md-4">
+       <div class="card">
+        <a href=""><img src="img/4.jpg" class="card-img-top" alt="Card imf cap"></a>
+       </div>
+      </div>
+      <div class="col-md-4">
+       <div class="card">
+         <a href=""><img src="img/5.jpg" class="card-img-top" alt="Card imf cap"></a>
+       </div>
+      </div>
+      <div class="col-md-4">
+       <div class="card">
+         <a href=""><img src="img/6.jpg" class="card-img-top" alt="Card imf cap"></a>
+       </div>
+      </div>
+    </div>
+    </div>
   </section>
+
+  <!-- skill -->
+  <section id="skills" class="skills">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 text-center">
+          <h2>Skill</h2>
+          <hr>
+        </div>
+        <div class="col-md-12">
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">HTML 85%</div>
+          </div><br>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">CSS 70%</div>
+          </div><br>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">JavaScript 45%</div>
+          </div><br>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">Photoshop 70%</div>
+          </div><br>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Olahraga 100%</div>
+          </div>
+      </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="contact mb-3">
+    <div class="container">
+      <div class="row pt-4 mb-4">
+        <div class="col text-center">
+          <h2>Contact Us</h2>
+          <hr>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="card text-warning bg-secondary mb-3">
+            <div class="card-body">
+              <h5 class="card-title">Contact Us</h5>
+              <p class="card-text">Silahkan hubungi kami untuk informasi lebih lanjut.</p>
+              <p>089667372001</p>
+            </div>
+          </div>
+          <ul class="list-group">
+            <li class="list-group-item">Location</li>
+            <li class="list-group-item">Kp. Kebon Kapas Kec. Cicalengka</li>
+            <li class="list-group-item">Kab. Bandung</li>
+            <li class="list-group-item">Jawa Barat</li>
+          </ul>
+        </div>
+        <div class="col-lg-6">
+          <form>
+            <div class="form-group">
+              <label for="nama">Nama</label>
+              <input type="text" class="form-control" id="nama" >
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Email</label>
+              <input type="text" class="form-control" id="email">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">No Telp</label>
+              <input type="text" class="form-control" id="Telp">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Email</label>
+              <textarea name="pesan" id="pesan" class="form-control"></textarea>
+            </div>
+            <div class="form-group">
+              <button type="button" class="btn btn-secondary">Kirim Pesan!</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
+
+<!-- ======= Footer ======= -->
+<div id="footer" class="text-center">
+  <div class="container">
+    <div class="text-center">
+    </div>
+
+    <p>&copy; Copyrights KenEnma. 2020.</p>
+
+    <div class="credits">
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/main.js"></script>
 
     
   </body>
